Archive2/e5/5967d1a0c3b180/output
main.cpp:7:1: error: static assertion failed: concrete_class ought to be abstract.
 static_assert(std::is_abstract<concrete_class>(), "concrete_class ought to be abstract.");
 ^
